--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -122,15 +122,51 @@
     <value>..\Resources\Folder.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="HOME" xml:space="preserve">
-    <value>&lt;FORM name="Добро пожаловать!" noparse=""&gt;
-	&lt;label location="12,12" font="18"&gt;Добро пожаловать!&lt;/label&gt;
-	&lt;hi&gt;Дарова ёпта!&lt;/hi&gt;
-	&lt;bye&gt;Пока ёпта!&lt;/bye&gt;
-	&lt;combobox readonly="" change="${show} = ?(#{list},lel,#{hi},#{bye});#{field} = ${show};" location="12,50" size="134,20" name="list"&gt;
-		&lt;option&gt;lel&lt;/option&gt;
-		&lt;option&gt;ses&lt;/option&gt;
-	&lt;/combobox&gt;
-	&lt;richtextbox readonly="" location="12,80" size="420,134" name="field"&gt;&lt;/richtextbox&gt;
+    <value>&lt;FORM name="Добро пожаловать!" author="LIENKO SOFT"&gt; 
+&lt;label location="12,12" font="18"&gt;SapReader&lt;/label&gt; 
+&lt;button location="12,50" click="clickStart:"&gt;Начало работы&lt;/button&gt; 
+&lt;button location="112,50" click="clickAbout:"&gt;О программе&lt;/button&gt; 
+&lt;button location="203,50" click="clickSap:"&gt;О Sapphire™&lt;/button&gt; 
+
+&lt;label location="12,80" name="mainLabel"&gt;Добро пожаловать в SapReader.&lt;/label&gt;
+&lt;labelStart&gt;Для начала работы воспользуйтесь формой ниже или используйте меню в верхней части программы.&lt;/labelStart&gt;
+&lt;labelAbout&gt;Программа предназначена для работы в двух режимах: проводник с возможностью шифровать файлы и архиватор зашифрованных архивов.&lt;/labelAbout&gt;
+&lt;labelSap&gt;Security Algorythm, Private Protection From InfoRmation Exposure (Sapphire™) Защитный алгоритм, частная защита от уязвимости 
+информации - криптографический алгоритм с закрытым ключом для хранения и компакной передачи информации.&lt;/labelSap&gt;
+
+
+&lt;textbox location="12,117" size="420,20" name="key"&gt;Введите ключ&lt;/textbox&gt; 
+&lt;richtextbox location="12,139" size="420,134" name="text"&gt;Введите текст&lt;/richtextbox&gt; 
+&lt;button location="12,275" click="Click:"&gt;Шифровать&lt;/button&gt; 
+&lt;button location="100,275" click="@Click:"&gt;Расшифровать&lt;/button&gt; 
+
+
+
+&lt;label location="12,300" font="7"&gt;SapphireReader powered by Sapphire™
+LISENKO SOFT 2016 год
+&lt;/label&gt;
+
+
+
+
+
+&lt;script&gt; 
+clickStart:
+#mainLabel=#labelStart;
+clickAbout:
+#mainLabel=#labelAbout;
+clickSap:
+#mainLabel=#labelSap;
+
+Click: 
+$var = Click(@) 
+Compare($var,false) 
+#text=Sapphire(#text,#key) 
+!#text=@Sapphire(#text,#key); 
+
+
+&lt;/script&gt; 
+
 &lt;/FORM&gt;</value>
   </data>
   <data name="ls1" type="System.Resources.ResXFileRef, System.Windows.Forms">
