--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -124,16 +124,6 @@
   <data name="ls1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\ls1.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="LSSL" xml:space="preserve">
-    <value>&lt;FORM name="test"&gt;
-&lt;button size="100" name="ses" click="Main"/&gt;
-&lt;script&gt;
-function Main()
-Alert(_("ses").text)
-end
-&lt;/script&gt;
-&lt;/FORM&gt;</value>
-  </data>
   <data name="CHAT" xml:space="preserve">
     <value>&lt;FORM&gt;
 &lt;nl&gt;
@@ -157,5 +147,8 @@ Send:
   </data>
   <data name="PRO" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\PRO.lua;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="Host" xml:space="preserve">
+    <value>5.167.225.32</value>
   </data>
 </root>
