--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -154,4 +154,7 @@ Send:
   <data name="NEWS" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\NEWS.lua;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="HISTORY" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\HISTORY.lua;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
 </root>
